# obogo

./: README.md  pyproject.toml
obogo/: __init__.py  io_obo.py  obo_reader.py  statistics.py  tree.py  type_checkers.py
