[tool.poetry]
name = "obogo"
version = "0.2.7"
description = "Yet another ontology crawler to perform ORA!!!"
authors = ["glaunay <pitooon@gmail.com>"]
readme = "README.md"
repository = "https://github.com/glaunay/obogo"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scipy = "^1.11.3"
networkx = "^3.2.1"
uniprot-redis = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
